fix(test): make the build.gradle template evaluate and actually run
example.md used testCompile, removed in Gradle 7.0, so the template
SKILL.md called "the full, verified template" could not evaluate at all.
Reproduced on Gradle 8.4/JDK 21.

testImplementation fixes the evaluation error but not the skill: the pin
set still runs zero tests on JDK 16/17/21/25, because hubitat_ci 0.17 is
binary-locked to Groovy 2.5 and Groovy 2.5 does not run on JDK 16+. Pin a
JDK 11 toolchain so the fork runs on 11 while Gradle stays modern (Gradle
9 needs JDK 17+ to run, so org.gradle.java.home would break next).

Verified by running it: tests=2 skipped=0 failures=0.

Renewal pointed at hubitat_ci's GitHub releases page, which tops out at
v0.16 -- older than the pinned 0.17 -- so it cannot see the version in
use. Point it at the feed's maven-metadata.xml instead.

SKILL.md Step 4 said a sandbox.run() validation error would fail on the
hub too. It would not: hubitat_ci calls iconX3Url mandatory while 14 apps
across two live hubs run without it. Say so, and route to validationFlags.

Closes #26

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>